feat : add customerService and CustomerDomainListener tests